# Graphite

./: Cargo.toml  Dockerfile  compose.yaml
desktop/: Cargo.toml
desktop/bundle/src/: common.rs  mac.rs  win.rs
desktop/platform/mac/: build.rs
desktop/platform/win/: Cargo.toml  build.rs
desktop/platform/win/src/: bundle.rs  main.rs
desktop/src/: app.rs  cef.rs  lib.rs  window.rs
desktop/src/cef/: input.rs  internal.rs
desktop/src/cef/context/: builder.rs
desktop/src/cef/internal/: display_handler.rs  render_handler.rs
desktop/src/cef/texture_import/: iosurface.rs
desktop/src/render/: graphics_state.rs
desktop/wrapper/src/: handle_desktop_wrapper_message.rs  intercept_editor_message.rs  message_dispatcher.rs  messages.rs
editor/src/: dispatcher.rs  node_graph_executor.rs  test_utils.rs
editor/src/messages/dialog/: dialog_message_handler.rs
editor/src/messages/dialog/new_document_dialog/: new_document_dialog_message_handler.rs
editor/src/messages/input_mapper/utility_types/: input_mouse.rs
editor/src/messages/input_preprocessor/: input_preprocessor_message.rs  input_preprocessor_message_handler.rs
editor/src/messages/portfolio/: portfolio_message.rs  portfolio_message_handler.rs
editor/src/messages/portfolio/document/: document_message_handler.rs
editor/src/messages/tool/common_functionality/: auto_panning.rs  resize.rs  shape_editor.rs
editor/src/messages/viewport/: viewport_message.rs  viewport_message_handler.rs
frontend/wasm/src/: editor_api.rs
node-graph/gcore/src/: logic.rs
(+8 files in other folders)
