[package]
name = "graphite-desktop-platform-win"
version = "0.1.0"
description = "Graphite Desktop Platform Windows"
authors = ["Graphite Authors <contact@graphite.rs>"]
license = "Apache-2.0"
repository = ""
edition = "2024"
rust-version = "1.87"

[features]
default = ["bundle"]
bundle = ["dep:cef-dll-sys"]
app = ["dep:graphite-desktop"]

[dependencies]
graphite-desktop = { path = "../..", optional = true }
cef-dll-sys = { workspace = true, optional = true }
